--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+
 {
   "files": [],
   "references": [
@@ -14,6 +15,13 @@
     "skipLibCheck": true,
     "allowJs": true,
     "noUnusedLocals": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "target": "ES2022",
+    "module": "commonjs",
+    "lib": ["ES2022", "dom", "esnext"],
+    "outDir": "dist"
   }
 }
+
+
+
